target/classes/META-INF/jkube/openshift/workshop-main-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    jkube.io/git-branch: master
    jkube.io/scm-url: https://github.com/snowdrop/spring-boot-bom/workshop-main
    jkube.io/issue-system: GitHub
    jkube.io/issue-tracker-url: https://github.com/snowdrop/spring-boot-bom/issues
    jkube.io/git-url: https://github.com/likhia/INTERNAL_SERVICE.git
    app.openshift.io/vcs-uri: https://github.com/likhia/INTERNAL_SERVICE.git
    jkube.io/scm-tag: 2.3.2.Beta1
    jkube.io/git-commit: 975bd1070d7b47274410c1449a775ae9afe229d2
    app.kubernetes.io/vcs-uri: git@github.com:snowdrop/rest-http-example.git
  labels:
    app.kubernetes.io/part-of: http-api-example
    app.openshift.io/runtime-version: 2.3.2.RELEASE
    app.kubernetes.io/name: http-api
    app.openshift.io/runtime: rh-spring-boot
    app.kubernetes.io/component: frontend
    app: workshop-main
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.workshop.main
  name: workshop-main
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: workshop-main
